**chore: 升级依赖版本并优化测试逻辑**
- 升级 Gradle 到 9.4.0，更新相关配置文件
- 将 Spring Boot 更新至 3.5.12，同时固定 Spring Framework 和 Security 的小版本以避免不兼容风险
- 调整测试类 `TokenCostMetricsServiceBranchCoverageTest` 和 `LlmGatewayPrivateHelpersCoveragePart2Test` 中的参数匹配逻辑
- 优化 `RagCommentIndexBuildServiceIntegrationTest` 的构造方法，改用 Spring 的构造器注入
- 重构方法 `numberLike` 逻辑，使用 `switch` 表达式简化代码
- 调整测试断言，确保使用更明确的断言形式
- 移除不必要的导入和注解警告，精简代码